# markdown-harvest

./: .gitignore  CHANGELOG.md  Cargo.toml  DEV_NOTES.md  README.md  powershell_cache_script_permanent.ps1  sample-result.md  samples.md
.claude/: settings.local.json
.claude/commands/: continue-session.md  save-session-cache.md
.github/workflows/: binaries.yml  build.yml  publish.yml  rust.yml
examples/: README.md  async_chunks_example.rs  async_example.rs  sync_chunks_example.rs  sync_example.rs
specs/: spec_better_unit_tests.md
src/: content_processor.rs  http_client.rs  http_config.rs  http_regex.rs  lib.rs  main.rs  markdown_harvester.rs  patterns.rs  user_agent.rs
