[package]
name = "markdown-harvest"
version = "0.1.6"
edition = "2024"
keywords = ["html", "text", "markdown", "ai", "rag"]
license = "MIT"
readme = "README.md"
description = "A Rust crate designed to extract, clean, and convert web content from URLs found in text messages into clean Markdown format. Originally created as an auxiliary component for Retrieval-Augmented Generation (RAG) solutions to process URLs submitted by users."
repository = "https://github.com/franciscotbjr/markdown-harvest"
categories = ["web-programming", "text-processing", "parsing"]
exclude = [
    ".github/*",
    ".claude/*",
    "assets/*",
    "sample-result.md",
    "examples/*",
    "impl.md",
    "impl-history.md",
    "powershell_cache_script_permanent.ps1",
    "samples.md",
    "DEV_NOTES.md"
]

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "cookies", "native-tls", "http2"] }
regex = "1"
tokio = { version = "1.47.1", features = ["full"] }
scraper = "0.25.0"
rand = "0.9.2"
html2md = "0.2"
futures = "0.3.31"
once_cell = "1.21.3"
text-splitter = { version = "0.29.3", optional = true, features = ["markdown"] }

[features]
chunks = ["text-splitter"]